--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
   <div class="container text-center">
     <h1 class="block-title m-b-sm text-uppercase app-myphone-brand">Mochi</h1>
     <p class="lead m-b-lg p-b-md">Task management and a calendar for all</p>
-    <img src="dist/img/iphone-to-iphone-sized.jpg">
+    <img src="../assets/img/iphone-to-iphone-sized.jpg">
   </div>
 </div>
 
 <div class="block block-bordered-lg">
   <div class="container text-center app-translate-15" data-transition="entrance">
     <blockquote class="pull-quote">
-      <img class="img-circle" src="dist/img/avatar-mdo.png">
+      <img class="img-circle" src="../assets/img/avatar-mdo.png">
       <p>
         “Task management. Calendars. Email. They all have one thing in common&hellip;literally no one enjoys managing them. Thanks to years of research, we can now predict every single thing you'll ever have to do or go to. Yeah, we're that good.”
       </p>
@@ -88,7 +88,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-6">
         <img
-          src="dist/img/iphone-perspective-sized.jpg"
+          src="../assets/img/iphone-perspective-sized.jpg"
           class="app-translate-5"
           data-transition="entrance">
         <hr class="m-t-0 m-b-lg m-x-auto visible-xs">
@@ -208,7 +208,7 @@
                 </p>
               </div>
             </div>
-            <img class="img-responsive m-t-lg app-block-game-img" src="dist/img/iphone-flat-sized.jpg">
+            <img class="img-responsive m-t-lg app-block-game-img" src="../assets/img/iphone-flat-sized.jpg">
           </div>
         </div>
       </div>
@@ -222,7 +222,7 @@
                 </p>
               </div>
             </div>
-            <img class="img-responsive m-t-lg app-block-game-img" src="dist/img/iphone-flat-sized.jpg">
+            <img class="img-responsive m-t-lg app-block-game-img" src="../assets/img/iphone-flat-sized.jpg">
           </div>
         </div>
       </div>
@@ -236,7 +236,7 @@
                 </p>
               </div>
             </div>
-            <img class="img-responsive m-t-lg app-block-game-img" src="dist/img/iphone-flat-sized.jpg">
+            <img class="img-responsive m-t-lg app-block-game-img" src="../assets/img/iphone-flat-sized.jpg">
           </div>
         </div>
       </div>
@@ -283,7 +283,7 @@
     </div>
   </div>
   <div class="text-right app-block-design-img">
-    <img src="dist/img/iphone-reverse-perspective-sized.jpg" class="app-translate-50" data-transition="entrance">
+    <img src="../assets/img/iphone-reverse-perspective-sized.jpg" class="app-translate-50" data-transition="entrance">
   </div>
 </div>
 
