--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
         </button> -->
         <a class="navbar-brand" href="../">
-          <img class="" src="./docs/assets/svg/logo.svg" height="72">
+          <img class="logo-header" src="./docs/assets/svg/logo.svg" height="72">
         </a>
       </div>
       <div class="navbar-collapse collapse" id="navbar-collapse">
@@ -68,7 +68,7 @@
             <input type="email" class="form-control text-center" id="exampleInputEmail1" placeholder="Email address">
           </fieldset>
           <button type="button" class="btn btn-lg btn-success hero-btn">Free Preview</button>
-          <div class="p-t"><small class="text-muted text-left">We'll never share your email with anyone else.</small></div>
+          <div class="p-t"><small class="text-muted btn-caption">We'll never share your email with anyone else.</small></div>
         </form>
       </div>
       <div class="col-sm-7">
@@ -86,14 +86,14 @@
 
         <div class="col-sm-5 hidden-xs">
           <!-- <img class="app-iphone" src="./docs/assets/img//startup-2.jpg" style="width: 100%;"> -->
-          <img class="m-b" src="./docs/assets/svg/happily-married.svg">
+          <img class="happily-married" src="./docs/assets/svg/happily-married.svg">
         </div>
 
-        <div class="col-sm-6 col-sm-offset-1">
+        <div class="col-sm-7">
           <h6 class="text-muted text-uppercase">Rich Information</h6>
           <h3 class="m-t-0 fw-300">Hosting Software and Hardware Happily Married.</h3>
           <p class="lead text-muted m-b-md">Don’t get us wrong. High performance hardware makes us giddy. But if your host isn’t optimizing your stack, you’ll be left with a slow store. Bigger processors and more RAM please! Let us show you what a fully optimized Magento hosting environment looks like.</p>
-          <div class="row hidden-sm">
+          <div class="row m-b-md hidden-sm">
             <div class="col-sm-6 m-b-md">
               <h5 class="m-y-0"><strong>Fix the issues</strong></h5>
               <p>Help Magento play nice with your database. Maximize server level caching. Clean up your logs.<a href="#" class="text-primary"> <br>Learn more.</a></p>
@@ -169,7 +169,7 @@
             src="./docs/assets/img/iphone-perspective-sized.jpg"
             class="app-translate-5"
             data-transition="entrance" style="width: 100%;"> -->
-            <img class="m-b" src="./docs/assets/svg/software-icon.svg" height="250px" width="250px">
+            <center><img class="m-b" src="./docs/assets/svg/software-icon.svg" height="250px" width="250px"></center>
           <hr class="m-t-0 m-b-lg m-x-auto visible-xs">
         </div>
         <div class="col-md-5 col-sm-6 text-xs-center text-sm-left">
@@ -198,50 +198,50 @@
   <div class="app-price-plans">
     <div class="container text-center">
 
-      <div class="row m-y-lg">
-        <div class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-          <h3 class="m-t-md text-uppercase">Cloud, Dedicated, and Enterprise Plans</h3>
+      <div class="row price-head-row">
+        <div class="pricing-head col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
+          <h2 class="m-t-md text-uppercase">Cloud, Dedicated, and Enterprise Plans</h2>
           <p  class="m-t-0 text-muted">Each hosting type has multiple options to choose from. Our experts consider your speed needs, budget, and other factors to help you find the right fit. Come on, get some great advice and smile again.</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-sm-4 p-x m-b-sm">
+        <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h6 class="text-muted text-uppercase m-b">Cloud</h6>
             <img class="m-b" src="./docs/assets/img//startup-15.svg">
             <p>Plenty of processing power for any personal projects, big or small.</p>
           </div>
 
-          <ul class="list-unstyled list-bordered text-left m-y-md">
+          <ul class="list-unstyled list-bordered list-features m-y-md">
             <li class="p-y"><strong>10k</strong> monthly requests</li>
             <li class="p-y"><strong>9am-5pm</strong> technical supprt</li>
             <li class="p-y"><strong>Public</strong> API access</li>
           </ul>
         </div>
 
-        <div class="col-sm-4 p-x m-b-sm">
+        <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h6 class="text-muted text-uppercase m-b">Dedicated</h6>
             <img class="m-b" src="./docs/assets/img//startup-16.svg">
             <p>The perfect sized plan for small businesses to get started.</p>
           </div>
 
-          <ul class="list-unstyled list-bordered text-left m-y-md">
+          <ul class="list-unstyled list-bordered list-features m-y-md">
             <li class="p-y"><strong>100k</strong> monthly requests</li>
             <li class="p-y"><strong>24/7</strong> technical supprt</li>
             <li class="p-y"><strong>Public</strong> API access</li>
           </ul>
         </div>
 
-        <div class="col-sm-4 p-x m-b-sm">
+        <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h6 class="text-muted text-uppercase m-b">Enterprise</h6>
             <img class="m-b p-a-sm" src="./docs/assets/img/startup-17.svg">
             <p>An unlimited plan that will scale infinitely to any size project.</p>
           </div>
 
-          <ul class="list-unstyled list-bordered text-left m-y-md">
+          <ul class="list-unstyled list-bordered list-features m-y-md">
             <li class="p-y"><strong>Unlimited</strong> monthly requests</li>
             <li class="p-y"><strong>24/7</strong> technical supprt</li>
             <li class="p-y"><strong>Public & Private</strong> API access</li>
@@ -250,13 +250,11 @@
       </div>
 
       <div class="">
-        <button class="btn btn-lg btn-primary w-md m-t-md m-b-lg">
-        <span class="visible-lg-inline">Start an account</span>
-        </button>
+        <button class="btn btn-lg btn-primary w-md m-t-md m-b-lg">Start an account</button>
       </div>
 
       <div class="row">
-        <div class="panel">
+        <div class="panel narrow">
           <div class="panel-body p-b-lg">
             <h4 class="m-y-sm"><strong>Are you a big dog? Do you laugh at small hosting plans?</strong></h4>
             <p class="m-t-sm">Give us a call:</p>
