HTML/CSS/Copy changes

--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
         <h1>Blazing Fast Magento Hosting.</h1>
         <hr>
-        <h4>Stop ticking off your customers.</h4>
-        <h4 class=""><strong>They want to buy, but slow stores get them feeling down</strong>.</h4>
+        <h4 class=""><strong>Try a free preview and rank among the fastest 7% of Magento stores in 3 days</strong>.</h4>
         <form action="">
           <fieldset class="form-group">
             <label for="exampleInputEmail1"><!--Email address--></label>
-            <input type="email" class="form-control text-center" id="exampleInputEmail1" placeholder="Email address">
+            <input type="email" class="form-control text-center" id="exampleInputEmail1" placeholder="Phone or Email">
           </fieldset>
           <button type="button" class="btn btn-lg btn-success hero-btn">Free Preview</button>
-          <div class="p-t"><small class="text-muted btn-caption">We'll never share your email with anyone else.</small></div>
+          <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call 888-222-2222 (8am - 5pm MDT)</small></div>
         </form>
       </div>
       <div class="col-sm-7">
@@ -90,17 +89,17 @@
         </div>
 
         <div class="col-sm-7">
-          <h6 class="text-muted text-uppercase">Rich Information</h6>
-          <h3 class="m-t-0 fw-300">Hosting Software and Hardware Happily Married.</h3>
-          <p class="lead text-muted m-b-md">Don’t get us wrong. High performance hardware makes us giddy. But if your host isn’t optimizing your stack, you’ll be left with a slow store. Bigger processors and more RAM please! Let us show you what a fully optimized Magento hosting environment looks like.</p>
+          <h6 class="text-muted text-uppercase">Performance Boost</h6>
+          <h3 class="m-t-0 fw-300">Magento Hosting Secret Sauce</h3>
+          <p class="lead text-muted m-b-md">Don't get us wrong. High performance hardware makes us giddy. But if your host isn't optimizing your stack, you'll be left with a slow store. <strong style="color: #313131;">We married the ideal Magento setup with industry leading hardware to create the fastest Magento experience available.</strong></p>
           <div class="row m-b-md hidden-sm">
             <div class="col-sm-6 m-b-md">
               <h5 class="m-y-0"><strong>Fix the issues</strong></h5>
-              <p>Help Magento play nice with your database. Maximize server level caching. Clean up your logs.<a href="#" class="text-primary"> <br>Learn more.</a></p>
+              <p>Our first step is to fix bottlenecks in your store. We want Magento to play nice with your server. When the cleanup is done, one of our speed experts will call you to discuss the speed results.</p>
             </div>
             <div class="col-sm-6">
               <h5 class="m-y-0"><strong>Add horsepower</strong></h5>
-              <p>Increase the speed limit with industry leading processing power and state of the art solid state drives. Ahhh, the wind in your hair.<a href="#" class="text-primary"> Learn more</a>.</p>
+              <p>After your software is squared away, we'll increase the speed limit with industry leading processing power and solid state drives. Ahhh. The wind in your hair.</p>
             </div>
           </div>
         </div>
@@ -114,9 +113,9 @@
       <blockquote class="pull-quote">
         <img class="img-circle" src="./docs/assets/img/avatar-mdo.png">
         <p>
-          There must be a problem, we've had quite a few people shopping, several orders, and I've had no phone calls, no emails, and no complaints. WHAT?!?!?!?!?!?!? THIS IS AMAZING!”
+          "There must be a problem, we've had quite a few people shopping, several orders, and I've had no phone calls, no emails, and no complaints. <strong>WHAT?!?!?!?!?!?!? THIS IS AMAZING!</strong>”
         </p>
-        <cite>Robb Price, DeliverGood</cite>
+        <cite>Robb Price, <strong>DeliverGood</strong></cite>
       </blockquote>
     </div>
   </div>
@@ -126,7 +125,7 @@
       <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <h2>How It Works</h2>
-        <p class="lead m-x-auto">We include a <strong>free preview for all customers</strong>. There is so much fluff around Magento hosting. Speed claims are abundant, but load times aren't clear until after you've switched. We prefer to make it clear.</p>
+        <p class="lead m-x-auto">We include a <strong><a href="#">free preview for all customers</a></strong>. There is so much fluff around Magento hosting. Speed claims are abundant, but load times aren't clear until after you've switched. We prefer to make it clear.</p>
       </div>
       </div>
       <div class="row">
@@ -137,9 +136,7 @@
                 <span class="icon icon-bar-graph"></span>
               </div>
               <p class="featured-list-icon-text m-b-0"><strong>Obvious results</strong></p>
-              <p class="featured-list-icon-text">
-                Average load time: 1.8 seconds. Yes, this is an average. It's one of our favorite numbers because no other host publicly displays their load times. Load and proud!
-              <a href="#" class="text-primary"> <br>Learn more.</a></p>
+              <p class="featured-list-icon-text">Our customers perform in the fastest 7% of live Magento websites. Because we have deep roots in Magento development, we understand every piece of the speed puzzle and help Magento work in your favor.</p>
             </li>
           </ul>
         </div>
@@ -151,9 +148,7 @@
                 <span class="icon icon-database"></span>
               </div>
               <p class="featured-list-icon-text m-b-0"><strong>Easy migration</strong></p>
-              <p class="featured-list-icon-text">
-                Our experienced Magento engineers answer your questions, migrate your store, and walk you through the speed results when we're done. 3 days start to finish. Let us make you smile.
-              <a href="#" class="text-primary"> <br>Learn more.</a></p>
+              <p class="featured-list-icon-text">Our experienced Magento engineers answer your questions, migrate your store, and walk you through the speed results when we're done. 3 days start to finish. Let us make you smile.</p>
             </li>
           </ul>
         </div>
@@ -161,20 +156,16 @@
     </div>
   </div>
 
-  <div class="block-bordered-lg p-b-0 app-block-stats">
+  <!-- <div class="block-bordered-lg p-b-0 app-block-stats">
     <div class="container">
       <div class="row">
         <div class="col-md-7 col-sm-6">
-          <!-- <img
-            src="./docs/assets/img/iphone-perspective-sized.jpg"
-            class="app-translate-5"
-            data-transition="entrance" style="width: 100%;"> -->
             <center><img class="m-b" src="./docs/assets/svg/software-icon.svg" height="250px" width="250px"></center>
           <hr class="m-t-0 m-b-lg m-x-auto visible-xs">
         </div>
         <div class="col-md-5 col-sm-6 text-xs-center text-sm-left">
-          <p class="lead">How much is your slow load-time costing you?</p>
-          <p class="lead"><strong>We’re glad that others agree:</strong></p>
+          <h2 class="">How much is your slow load-time costing you?</h2>
+          <h3 class=""><strong>We’re glad that others agree:</strong></h3>
           <div class="row m-y-md">
             <div class="col-xs-6">
               <div class="statcard">
@@ -192,7 +183,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="app-price-plans">
@@ -201,50 +192,50 @@
       <div class="row price-head-row">
         <div class="pricing-head col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
           <h2 class="m-t-md text-uppercase">Cloud, Dedicated, and Enterprise Plans</h2>
-          <p  class="m-t-0 text-muted">Each hosting type has multiple options to choose from. Our experts consider your speed needs, budget, and other factors to help you find the right fit. Come on, get some great advice and smile again.</p>
+          <p  class="m-t-0 text-muted">Each hosting type has multiple options to choose from. Our experts consider your speed needs, budget, and other factors to help you find the right fit. Come on, get some great speed advice and smile again.</p>
         </div>
       </div>
 
       <div class="row">
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
-            <h6 class="text-muted text-uppercase m-b">Cloud</h6>
+            <h3 class="text-muted text-uppercase m-b">Cloud</h3>
             <img class="m-b" src="./docs/assets/img//startup-15.svg">
             <p>Plenty of processing power for any personal projects, big or small.</p>
           </div>
 
           <ul class="list-unstyled list-bordered list-features m-y-md">
-            <li class="p-y"><strong>10k</strong> monthly requests</li>
-            <li class="p-y"><strong>9am-5pm</strong> technical supprt</li>
-            <li class="p-y"><strong>Public</strong> API access</li>
+            <!-- <li class="p-y"><strong>10k</strong> monthly requests</li> -->
+            <!-- <li class="p-y"><strong>9am-5pm</strong> technical supprt</li> -->
+            <!-- <li class="p-y"><strong>Public</strong> API access</li> -->
           </ul>
         </div>
 
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
-            <h6 class="text-muted text-uppercase m-b">Dedicated</h6>
+            <h3 class="text-muted text-uppercase m-b">Dedicated</h3>
             <img class="m-b" src="./docs/assets/img//startup-16.svg">
             <p>The perfect sized plan for small businesses to get started.</p>
           </div>
 
           <ul class="list-unstyled list-bordered list-features m-y-md">
-            <li class="p-y"><strong>100k</strong> monthly requests</li>
-            <li class="p-y"><strong>24/7</strong> technical supprt</li>
-            <li class="p-y"><strong>Public</strong> API access</li>
+            <!-- <li class="p-y"><strong>100k</strong> monthly requests</li> -->
+            <!-- <li class="p-y"><strong>24/7</strong> technical supprt</li> -->
+            <!-- <li class="p-y"><strong>Public</strong> API access</li> -->
           </ul>
         </div>
 
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
-            <h6 class="text-muted text-uppercase m-b">Enterprise</h6>
+            <h3 class="text-muted text-uppercase m-b">Enterprise</h3>
             <img class="m-b p-a-sm" src="./docs/assets/img/startup-17.svg">
             <p>An unlimited plan that will scale infinitely to any size project.</p>
           </div>
 
           <ul class="list-unstyled list-bordered list-features m-y-md">
-            <li class="p-y"><strong>Unlimited</strong> monthly requests</li>
-            <li class="p-y"><strong>24/7</strong> technical supprt</li>
-            <li class="p-y"><strong>Public & Private</strong> API access</li>
+            <!-- <li class="p-y"><strong>Unlimited</strong> monthly requests</li> -->
+            <!-- <li class="p-y"><strong>24/7</strong> technical supprt</li> -->
+            <!-- <li class="p-y"><strong>Public & Private</strong> API access</li> -->
           </ul>
         </div>
       </div>
@@ -254,11 +245,11 @@
       </div>
 
       <div class="row">
+        <h3 class="m-t-md"><strong>Questions?</strong></h3>
+        <p class="m-t-sm m-b-0 lead">Call one of our Magento speed experts:</p>
         <div class="panel narrow">
           <div class="panel-body p-b-lg">
-            <h4 class="m-y-sm"><strong>Are you a big dog? Do you laugh at small hosting plans?</strong></h4>
-            <p class="m-t-sm">Give us a call:</p>
-            <hr>
+
             <h3 class="m-t-lg brand-primary"><span class="m-r-sm icon icon-landline"></span> 888-888-8888</h3>
           </div>
         </div>
