updated hero graphic

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <div class="row">
       <div class="col-sm-5">
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
-        <h1>Blazing Fast Magento Hosting.</h1>
-        <hr>
-        <h4 class=""><strong>Try a free preview and rank among the fastest 7% of Magento stores in 3 days</strong>.</h4>
+        <h1>Blazing Fast <br>Magento Hosting.</h1>
+        <!-- <hr class="hero-hr"> -->
+        <h4 class="m-x-lg">Try a free preview and <strong>rank among the fastest 7% of Magento stores in 3 days</strong>.</h4>
         <form action="">
           <fieldset class="form-group">
             <label for="exampleInputEmail1"><!--Email address--></label>
@@ -70,9 +70,10 @@
           <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call 888-222-2222 (8am - 5pm MDT)</small></div>
         </form>
       </div>
-      <div class="col-sm-7">
+      <div class="col-sm-6 col-sm-offset-1">
         <!-- <img class="img-responsive hero-img" src="./docs/assets/img/2.3_GFX02.3.png" alt=""> -->
-          <div class="browser-content"></div>
+          <!-- <div class="browser-content"></div> -->
+          <img class="logo-header m-t-lg" src="./docs/assets/svg/gfx-hero1.2.svg" height="232">
         </div>
       </div>
     </div>
@@ -88,7 +89,7 @@
           <img class="happily-married" src="./docs/assets/svg/happily-married.svg">
         </div>
 
-        <div class="col-sm-7">
+        <div class="col-sm-6 col-sm-offset-1">
           <h6 class="text-muted text-uppercase">Performance Boost</h6>
           <h3 class="m-t-0 fw-300">Magento Hosting Secret Sauce</h3>
           <p class="lead text-muted m-b-md">Don't get us wrong. High performance hardware makes us giddy. But if your host isn't optimizing your stack, you'll be left with a slow store. <strong style="color: #313131;">We married the ideal Magento setup with industry leading hardware to create the fastest Magento experience available.</strong></p>
