small design tweaks- about ready for launch

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       <div class="navbar-collapse collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li >
-            <h3 class="m-t-lg text-muted"><span class="m-r-sm icon icon-landline brand-primary"></span> 888-888-8888</h3>
+            <ul class="list-inline">
+              <li><img class="phone-icon" src="./docs/assets/svg/phone-icon.svg" height="28"></li>
+              <li><h3 class="m-t-md text-muted"><span class="m-r-sm icon brand-primary"></span> 888-888-8888</h3></li>
+            </ul>
+            <div><small class="text-muted nav-caption">(8am - 5pm MDT)</small></div>
           </li>
           <!-- <li >
             <a href="../docs/index.html">Docs</a>
@@ -58,22 +62,26 @@
     <div class="row">
       <div class="col-sm-5">
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
-        <h1>Blazing Fast <br>Magento Hosting.</h1>
-        <!-- <hr class="hero-hr"> -->
-        <h4 class="m-x-lg">Try a free preview and <strong>rank among the fastest 7% of Magento stores in 3 days</strong>.</h4>
+        <h3 class="blaze m-t-md m-b-0">Blazing Fast</h3>
+        <h1 class="m-b-md m-t-0"><strong>Magento Hosting</strong></h1>
+        <img class="speed-gfx visible-xs" src="./docs/assets/svg/gfx-hero1.2.svg">
+        <h3 class="m-b-sm text-muted-sm">Try a free preview and <strong>rank among the fastest 7% of Magento stores</strong>.</h3>
+        <small class="text-uppercase text-muted">In 3 Days</small>
         <form action="">
           <fieldset class="form-group">
             <label for="exampleInputEmail1"><!--Email address--></label>
-            <input type="email" class="form-control text-center" id="exampleInputEmail1" placeholder="Phone or Email">
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Phone or Email">
           </fieldset>
           <button type="button" class="btn btn-lg btn-success hero-btn">Free Preview</button>
-          <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call 888-222-2222 (8am - 5pm MDT)</small></div>
+          <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-222-2222</span> (8am - 5pm MDT)</small></div>
         </form>
       </div>
-      <div class="col-sm-6 col-sm-offset-1">
-        <!-- <img class="img-responsive hero-img" src="./docs/assets/img/2.3_GFX02.3.png" alt=""> -->
-          <!-- <div class="browser-content"></div> -->
-          <img class="logo-header m-t-lg" src="./docs/assets/svg/gfx-hero1.2.svg" height="232">
+      <div class="hidden-xs col-sm-6 col-sm-offset-1">
+        <div id="table">
+          <div id="table-cell">
+              <img class="speed-gfx" src="./docs/assets/svg/gfx-hero1.2.svg">
+          </div>
+        </div>
         </div>
       </div>
     </div>
@@ -201,7 +209,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Cloud</h3>
-            <img class="m-b" src="./docs/assets/img//startup-15.svg">
+            <img class="price-img m-b" src="./docs/assets/img//startup-15.svg">
             <p>Plenty of processing power for any personal projects, big or small.</p>
           </div>
 
@@ -215,7 +223,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Dedicated</h3>
-            <img class="m-b" src="./docs/assets/img//startup-16.svg">
+            <img class="price-img m-b" src="./docs/assets/img//startup-16.svg">
             <p>The perfect sized plan for small businesses to get started.</p>
           </div>
 
@@ -229,7 +237,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Enterprise</h3>
-            <img class="m-b p-a-sm" src="./docs/assets/img/startup-17.svg">
+            <img class="price-img m-b p-a-sm" src="./docs/assets/img/startup-17.svg">
             <p>An unlimited plan that will scale infinitely to any size project.</p>
           </div>
 
@@ -250,8 +258,10 @@
         <p class="m-t-sm m-b-0 lead">Call one of our Magento speed experts:</p>
         <div class="panel narrow">
           <div class="panel-body p-b-lg">
-
-            <h3 class="m-t-lg brand-primary"><span class="m-r-sm icon icon-landline"></span> 888-888-8888</h3>
+            <ul class="m-t-md list-inline">
+              <li><img class="phone-icon" src="./docs/assets/svg/phone-icon.svg" height="28"></li>
+              <li><h3 class="m-t-md text-muted"><span class="m-r-sm icon brand-primary"></span> 888-888-8888</h3></li>
+            </ul>
           </div>
         </div>
       </div>
