--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="m-b-md m-t-0"><strong>Magento Hosting</strong></h1>
         <img class="speed-gfx visible-xs" src="./docs/assets/svg/gfx-hero1.2.svg">
         <h3 class="m-b-sm text-muted-sm">Try a free preview and <strong>rank among the fastest 7% of Magento stores</strong>.</h3>
-        <small class="text-uppercase text-muted">In 3 Days</small>
+        <p class="text-uppercase text-muted">In 3 Days</p>
         <form action="">
           <fieldset class="form-group">
             <label for="exampleInputEmail1"><!--Email address--></label>
