First round of SEO. Meta descriptions and alt tags.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Industry leading Magento hosting focused on speed">
+    <meta name="keywords" content="magento speed hosting experts free preview">
+    <meta name="author" content="Snapfast.com + Jackalope.io">
 
     <title>
 
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
         </button> -->
         <a class="navbar-brand" href="../">
-          <img class="logo-header" src="./docs/assets/svg/logo.svg" height="72">
+          <img class="logo-header" alt="snapfast full logo" src="./docs/assets/svg/logo.svg" height="72">
         </a>
       </div>
       <div class="navbar-collapse collapse" id="navbar-collapse">
@@ -64,7 +64,7 @@
         <!-- <h1 class="brand-primary"><strong>Snap!</strong></h1> -->
         <h3 class="blaze m-t-md m-b-0">Blazing Fast</h3>
         <h1 class="m-b-md m-t-0"><strong>Magento Hosting</strong></h1>
-        <img class="speed-gfx visible-xs" src="./docs/assets/svg/gfx-hero1.2.svg">
+        <img class="speed-gfx visible-xs" alt="faster load times than the competition" src="./docs/assets/svg/gfx-hero1.2.svg">
         <h3 class="m-b-sm text-muted-sm">Try a free preview and <strong>rank among the fastest 7% of Magento stores</strong>.</h3>
         <p class="text-uppercase text-muted">In 3 Days</p>
         <form action="">
@@ -94,7 +94,7 @@
 
         <div class="col-sm-5 hidden-xs">
           <!-- <img class="app-iphone" src="./docs/assets/img//startup-2.jpg" style="width: 100%;"> -->
-          <img class="happily-married" src="./docs/assets/svg/happily-married.svg">
+          <img class="happily-married" alt="magento happily married with hardware and server stack" src="./docs/assets/svg/happily-married.svg">
         </div>
 
         <div class="col-sm-6 col-sm-offset-1">
@@ -120,7 +120,7 @@
   <div class="block block-bordered-lg">
     <div class="container text-center app-translate-15" data-transition="entrance">
       <blockquote class="pull-quote">
-        <img class="img-circle" src="./docs/assets/img/avatar-mdo.png">
+        <img class="img-circle" alt="Robb Price- loyal customer" src="./docs/assets/img/avatar-mdo.png">
         <p>
           "There must be a problem, we've had quite a few people shopping, several orders, and I've had no phone calls, no emails, and no complaints. <strong>WHAT?!?!?!?!?!?!? THIS IS AMAZING!</strong>”
         </p>
@@ -209,7 +209,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Cloud</h3>
-            <img class="price-img m-b" src="./docs/assets/img//startup-15.svg">
+            <img class="price-img m-b" alt="cloud hosting pricing" src="./docs/assets/img//startup-15.svg">
             <p>Plenty of processing power for any personal projects, big or small.</p>
           </div>
 
@@ -223,7 +223,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Dedicated</h3>
-            <img class="price-img m-b" src="./docs/assets/img//startup-16.svg">
+            <img class="price-img m-b" alt="dedicated hosting pricing" src="./docs/assets/img//startup-16.svg">
             <p>The perfect sized plan for small businesses to get started.</p>
           </div>
 
@@ -237,7 +237,7 @@
         <div class="pricing-box col-sm-4 m-b-sm">
           <div class="p-x">
             <h3 class="text-muted text-uppercase m-b">Enterprise</h3>
-            <img class="price-img m-b p-a-sm" src="./docs/assets/img/startup-17.svg">
+            <img class="price-img m-b p-a-sm" alt="enterprise hosting pricing" src="./docs/assets/img/startup-17.svg">
             <p>An unlimited plan that will scale infinitely to any size project.</p>
           </div>
 
@@ -259,7 +259,7 @@
         <div class="panel narrow">
           <div class="panel-body p-b-lg">
             <ul class="m-t-md list-inline">
-              <li><img class="phone-icon" src="./docs/assets/svg/phone-icon.svg" height="28"></li>
+              <li><img class="phone-icon" alt="give us a call" src="./docs/assets/svg/phone-icon.svg" height="28"></li>
               <li><h3 class="m-t-md text-muted"><span class="m-r-sm icon brand-primary"></span> 888-888-8888</h3></li>
             </ul>
           </div>
@@ -274,7 +274,7 @@
 
   <div class="" id="footer">
     <div class="text-center m-t-md m-b">
-      <img class="m-a" src="./docs/assets/svg/logo-footer.svg" height="32">
+      <img class="m-a" alt="snapfast minimal logo" src="./docs/assets/svg/logo-footer.svg" height="32">
     </div>
   </div>
 
