form not working

--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://jackalopemedia.com';}"></iframe>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+        onload="if(submitted) {window.location='http://jackalopemedia.com';}"></iframe>
         <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
   onsubmit="submitted=true;">
         <fieldset class="form-group">
