fixed input btn, I think

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <fieldset class="form-group">
             <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
           </fieldset>
-          <input type="button" name="submit" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">Free Preview</input>
+          <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
           <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small></div>
         </form>
       </div>
