--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="text-uppercase text-muted">In 3 Days</p>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-    onload="if(submitted) {window.location='http://jackalopemedia.com';}"></iframe>
+    onload="if(submitted) {window.location='http://snapfast.com';}"></iframe>
           <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
     onsubmit="submitted=true;">
           <fieldset class="form-group">
@@ -288,17 +288,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-        onload="if(submitted) {window.location='http://jackalopemedia.com';}"></iframe>
-        <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
-  onsubmit="submitted=true;">
-        <fieldset class="form-group">
-          <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
-        </fieldset>
-      </form>
+    onload="if(submitted) {window.location='http://snapfast.com';}"></iframe>
+          <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
+    onsubmit="submitted=true;">
+          <fieldset class="form-group">
+            <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
+          </fieldset>
+          <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
+        </form>
       </div>
       <div class="modal-footer">
-        <button type="button" name="submit" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">Free Preview</button>
-        <div class="p-t"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small></div>
+        <div class="text-center"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small></div>
       </div>
     </div>
   </div>
