--- a/index.html
+++ b/index.html
@@ -307,7 +307,19 @@
     <!-- For some reason jquery should be in the script below, but it's not -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
     </script>
-    <!-- For some reason jquery should be in the script below, but it's not -->
+    <!-- /For some reason jquery should be in the script below, but it's not -->
     <script src="dist/toolkit.min.js"></script>
+    <!-- g.analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-70706399-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <!-- /g.analytics -->
   </body>
 </html>
