Added conversion page and redirect

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 
 <body>
 
-
   <!-- Google Tag Manager -->
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T9KCRX"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -87,7 +86,7 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
         <p class="text-uppercase text-muted">In 3 Days</p>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-    onload="if(submitted) {window.location='http://snapfast.com';}"></iframe>
+    onload="if(submitted) {window.location='http://masoninthesis.github.io/SnapFast1.1/thanks.html';}"></iframe>
           <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
     onsubmit="submitted=true;">
           <fieldset class="form-group">
@@ -306,7 +305,7 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
     <div class="modal-content">
       <div class="modal-header">
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-    onload="if(submitted) {window.location='http://snapfast.com';}"></iframe>
+    onload="if(submitted) {window.location='http://masoninthesis.github.io/SnapFast1.1/thanks.html';}"></iframe>
           <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
     onsubmit="submitted=true;">
           <fieldset class="form-group">
