--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </title>
 
 
-      <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
       <link rel="stylesheet" href="dist/toolkit-minimal.min.css">
 
 
@@ -342,7 +342,7 @@
 </div>
 
     <!-- For some reason jquery should be in the script below, but it's not -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
     </script>
     <!-- /For some reason jquery should be in the script below, but it's not -->
     <script src="dist/toolkit.min.js"></script>
