--- a/index.html
+++ b/index.html
@@ -347,6 +347,50 @@
     <!-- /For some reason jquery should be in the script below, but it's not -->
     <script src="dist/toolkit.min.js"></script>
     <!-- g.analytics -->
+
+    <script>
+        // Fires modal when user exits
+        if ($.cookie('straightcanna') !== '1') {
+          var _ouibounce = ouibounce(false, {
+            aggressive: true,
+            timer: 0,
+            callback: function() {
+              $('#exitChoice').modal('show');
+              jQuery.cookie('straightcanna', '1', { expires: 7 });
+            }
+          });
+        }
+
+        // Centers modal on fire and resize
+        $(function() {
+            function reposition() {
+                var modal = $(this),
+                dialog = modal.find('.modal-dialog');
+                modal.css('display', 'block');
+
+                // Dividing by two centers the modal exactly, but dividing by three
+                // or four works better for larger screens.
+                dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));
+            }
+            // Reposition when a modal is shown
+            $('.modal').on('show.bs.modal', reposition);
+            // Reposition when the window is resized
+            $(window).on('resize', function() {
+                $('.modal:visible').each(reposition);
+            });
+        });
+
+        function showFormModal() {
+            $("#exitChoice").removeClass("fade").modal("hide");
+            $("#exitForm").addClass("fade").modal("show");
+        }
+
+        $("#showForm").on("click", function() {
+            showFormModal();
+        });
+
+    </script>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
