--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="//cdn.optimizely.com/js/4321282383.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,7 @@
 
     <title>
 
-        Minimal &middot;
+        SnapFast&#174; &middot; Blazing Fast Hosting
 
     </title>
 
@@ -347,49 +348,6 @@
     <!-- /For some reason jquery should be in the script below, but it's not -->
     <script src="dist/toolkit.min.js"></script>
     <!-- g.analytics -->
-
-    <script>
-        // Fires modal when user exits
-        if ($.cookie('straightcanna') !== '1') {
-          var _ouibounce = ouibounce(false, {
-            aggressive: true,
-            timer: 0,
-            callback: function() {
-              $('#exitChoice').modal('show');
-              jQuery.cookie('straightcanna', '1', { expires: 7 });
-            }
-          });
-        }
-
-        // Centers modal on fire and resize
-        $(function() {
-            function reposition() {
-                var modal = $(this),
-                dialog = modal.find('.modal-dialog');
-                modal.css('display', 'block');
-
-                // Dividing by two centers the modal exactly, but dividing by three
-                // or four works better for larger screens.
-                dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));
-            }
-            // Reposition when a modal is shown
-            $('.modal').on('show.bs.modal', reposition);
-            // Reposition when the window is resized
-            $(window).on('resize', function() {
-                $('.modal:visible').each(reposition);
-            });
-        });
-
-        function showFormModal() {
-            $("#exitChoice").removeClass("fade").modal("hide");
-            $("#exitForm").addClass("fade").modal("show");
-        }
-
-        $("#showForm").on("click", function() {
-            showFormModal();
-        });
-
-    </script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
