fixed html on vert-center modal

--- a/index.html
+++ b/index.html
@@ -322,21 +322,23 @@
 
 <!-- Modal -->
 <div class="modal fade" id="submodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-    onload="if(submitted) {window.location='http://masoninthesis.github.io/SnapFast1.1/thanks.html';}"></iframe>
-          <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
-    onsubmit="submitted=true;">
-          <fieldset class="form-group">
-            <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
-          </fieldset>
-          <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
-        </form>
-      </div>
-      <div class="modal-footer">
-        <div class="text-center"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small></div>
+  <div class="vertical-alignment-helper">
+    <div class="modal-dialog vertical-align-center" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+      onload="if(submitted) {window.location='http://masoninthesis.github.io/SnapFast1.1/thanks.html';}"></iframe>
+            <form action="https://docs.google.com/forms/d/1vdv02Vs2DDHNXClN-hozTICHR28UA_Fnn36jXpFzp7I/formResponse" method="post" id="ss-form" target="hidden_iframe"
+      onsubmit="submitted=true;">
+            <fieldset class="form-group">
+              <input type="text" name="entry.1510303287" class="form-control ss-q-short" id="entry_1510303287" dir="auto" placeholder="Phone or Email">
+            </fieldset>
+            <input type="submit" name="Free Preview" id="ss-submit" class="btn btn-lg btn-success hero-btn jfk-button jfk-button-action">
+          </form>
+        </div>
+        <div class="modal-footer">
+          <div class="text-center"><small class="text-muted btn-caption">Can't wait? Call <span class="brand-primary">888-495-2089</span> (8am - 5pm MDT)</small></div>
+        </div>
       </div>
     </div>
   </div>
