'free preview' is now a CTA modal window trigger

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button> -->
-        <a class="navbar-brand" href="../">
+        <!-- <a class="navbar-brand" href="../"> -->
           <img class="logo-header" alt="snapfast full logo" src="./docs/assets/svg/logo.svg" height="72">
-        </a>
+        <!-- </a> -->
       </div>
       <div class="navbar-collapse collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -95,7 +95,6 @@
     </div>
   </nav>
 
-
   <div class="container" id="hero">
     <div class="row">
       <div class="col-sm-5">
@@ -103,7 +102,7 @@
         <h3 class="blaze m-t-md m-b-0">Blazing Fast</h3>
         <h1 class="m-b-md m-t-0"><strong>Magento Hosting</strong></h1>
         <img class="speed-gfx visible-xs" alt="faster load times than the competition" src="./docs/assets/svg/gfx-hero1.2.svg">
-        <h3 class="m-b-sm text-muted-sm">Try a free preview and <strong>rank among the fastest 7% of Magento stores</strong>.</h3>
+      <h3 class="m-b-sm text-muted-sm">Try a <a href="#submodal" data-toggle="modal"><strong>free preview</strong></a> and rank among the fastest 7% of Magento stores.</h3>
         <p class="text-uppercase text-muted">In 3 Days</p>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
