Gave both buttons CSS transitions

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
 
       <div class="">
-        <button data-target="#submodal" data-toggle="modal" class="btn btn-lg btn-primary w-md m-t-md m-b-lg">Start an account</button>
+        <button data-target="#submodal" data-toggle="modal" class="btn btn-lg btn-primary footer-btn w-md m-t-md m-b-lg">Start an account</button>
       </div>
 
       <div class="row">
