added another modal CTA text link

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <h2>How It Works</h2>
-        <p class="lead m-x-auto">We include a <strong><a href="#">free preview for all customers</a></strong>. There is so much fluff around Magento hosting. Speed claims are abundant, but load times aren't clear until after you've switched. We prefer to make it clear.</p>
+        <p class="lead m-x-auto">We include a <strong><a href="#submodal" data-toggle="modal">free preview for all customers</a></strong>. There is so much fluff around Magento hosting. Speed claims are abundant, but load times aren't clear until after you've switched. We prefer to make it clear.</p>
       </div>
       </div>
       <div class="row">
